# AB-GRPC-HW

./: Makefile  README.md  deployment.yaml  docker-compose.yaml  pyproject.toml
.github/workflows/: app.yml
assets/materials/: docs_for_hw.md
docker/: Dockerfile
docker/test/: Dockerfile
src/greeting/: client.py  service.py
src/protobufs/: service.proto
tests/test_greeting/: test_client.py  test_service.py
